# linear-regressor-medical-insurance

./: Makefile  README.md  pyproject.toml
lin-mod/: __init__.py  dataset.py  features.py
lin-mod/modeling/: train.py
lin_mod/: dataset.py  features.py  plots.py
lin_mod/modeling/: linear_model.py  predict.py  train.py
tests/: test_configurations.py  test_cost.py  test_fit.py  test_gradients.py
